fix: tooltip z-index

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -23,6 +23,7 @@
   height: auto;
   background: none;
   flex: none;
+  z-index: 1;
 
   &:hover {
     cursor: pointer;
