--- a/sass/main.scss
+++ b/sass/main.scss
@@ -237,7 +237,7 @@ body {
     content: '';
     opacity: 0;
     visibility: hidden;
-    z-index: 3;
+    z-index: 10;
     transition-delay: .5s;
     transition: all 50ms ease;
   }
@@ -247,7 +247,7 @@ body {
     content: '';
     opacity: 0;
     visibility: hidden;
-    z-index: 3;
+    z-index: 10;
     @include transform-scale(20%);
     transition-delay: .5s;
     transition:
@@ -580,13 +580,6 @@ body {
 
   grid-column: 2 / 3;
   grid-row: 1 / 3;
-
-  // > .container {
-  //   width: 100%;
-  //   // border: 1px solid yellow;
-  //   border-left: none;
-  //   background-color: rgb(5, 55, 55);
-  // }
 }
 
 .server-header {
@@ -742,7 +735,6 @@ body {
   display: flex;
   align-items: center;
   min-width: 16ch;
-  overflow-x: hidden;
   flex: 0 1 auto;
 
   .room-subgroup-title {
@@ -799,7 +791,7 @@ body {
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         left: 0;
-        z-index: 2;
+        z-index: 1;
       }
 
       color: #fff;
